mobile-simulator/mobile-simulator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-simulator-deployment
  labels:
    app: mobile-simulator
spec:
  selector:
    matchLabels:
      app: mobile-simulator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mobile-simulator
    spec:
      containers:
        - image: quay.io/wdovey/mobile-simulator:css-fix
          imagePullPolicy: Always
          name: mobile-simulator
          ports:
            - containerPort: 8080
