mobile-simulator/mobile-simulator/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: mobile-simulator-service
spec:
  to:
    kind: Service
    name: mobile-simulator-service
